Fixing spacing and resume exit for mobile

--- a/css/media-queries.less
+++ b/css/media-queries.less
@@ -11,6 +11,10 @@
 		width: 80%;
 	}
 
+	header{
+		margin: 8em 0;
+	}
+
 	.work-item{
 		margin-bottom: 4em;
 	}
