--- a/css/resume.less
+++ b/css/resume.less
@@ -8,7 +8,7 @@ RESUME
 	left: 10%;
 	width: 80%;
 	padding: 2em;
-	margin: 2em auto 4em;
+	margin: 0 auto 4em;
 	text-align: left;
 	background: @white;
 	color: @black;
