--- a/css/styles.less
+++ b/css/styles.less
@@ -218,7 +218,7 @@ sub{
 HEADER
 ------------------------------*/
 header{
-	margin: 8em 0;
+	margin: 3em 0;
 	text-align: center;
 }
 
